Integração com Facebook

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -21,9 +25,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
             android:name=".QuestionActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".FimDeJogoActivity"></activity>
+        <activity android:name=".FimDeJogoActivity" />
+        <activity android:name=".ConfigActivity"></activity>
     </application>
 
 </manifest>
