--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,15 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
 }
