--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:name=".QuestionActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".FimDeJogoActivity" />
-        <activity android:name=".ConfigActivity"></activity>
+        <activity android:name=".ConfigActivity" />
     </application>
 
 </manifest>
